@startuml
class ModuleName {
    - ModuleName(id:int, name:string)
}
class ConsensusType {
    + ConsensusType()
}
class ContractType {
    + ContractType()
}
class DfsType {
    + DfsType()
}
class LedgerType {
    + LedgerType()
}
class KeySignerType {
    + KeySignerType()
}
class MempoolType {
    + MempoolType()
}
Enumeration <|-- ModuleName
ModuleName o-> "Consensus" ModuleName
ModuleName o-> "Contract" ModuleName
ModuleName o-> "Dfs" ModuleName
ModuleName o-> "Ledger" ModuleName
ModuleName o-> "KeySigner" ModuleName
ModuleName o-> "Mempool" ModuleName
ModuleName +-- ConsensusType
ModuleName <|-- ConsensusType
ModuleName +-- ContractType
ModuleName <|-- ContractType
ModuleName +-- DfsType
ModuleName <|-- DfsType
ModuleName +-- LedgerType
ModuleName <|-- LedgerType
ModuleName +-- KeySignerType
ModuleName <|-- KeySignerType
ModuleName +-- MempoolType
ModuleName <|-- MempoolType
@enduml
